--- a/components/VanguardReviews/VanguardReviews.module.css
+++ b/components/VanguardReviews/VanguardReviews.module.css
@@ -11,13 +11,8 @@
     --center-width: 400px;
     --side-width: 280px;
     background-color: var(--bg-secondary);
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    overflow-x: clip;
+    width: 100%;
+    overflow-x: clip; /* THE DEFINITIVE FIX */
 }
 
 .spotlightGlow {
@@ -35,7 +30,6 @@
 .cardSlot {
     position: absolute;
     transition: transform 0.7s cubic-bezier(0.22, 1, 0.36, 1), opacity 0.5s ease-out, left 0.7s cubic-bezier(0.22, 1, 0.36, 1);
-    /* --- DEFINITIVE FIX: Set base size here --- */
     width: var(--center-width);
     height: 500px;
 }
